--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "angular-datatables": "^16.0.0",
     "bootstrap": "^5.0.1",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.11.3",
     "jquery": "^3.7.0",
+    "json-server": "^0.17.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,7 +36,9 @@
     "@angular-devkit/build-angular": "^16.1.7",
     "@angular/cli": "~16.1.7",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "angular-in-memory-web-api": "^0.16.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
