--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.2.0",
     "@angular/cdk": "^16.1.7",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "angular-datatables": "^16.0.0",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.3.1",
     "datatables.net": "^1.11.3",
     "datatables.net-bs5": "^1.11.3",
     "datatables.net-dt": "^1.11.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "json-server": "^0.17.3",
+    "ngx-toaster": "^1.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
